--- a/views/emailRes.hbs
+++ b/views/emailRes.hbs
@@ -4,28 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .container {
+            background-color: #FFCCCC;
+            border-radius: 10px;
+            width: 400px;
+            margin: auto;
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 20px;
+        }
+        .header {
+            background-color: #170101;
+            padding: 20px;
+            text-align: center;
+        }
+        .content {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 10px;
+            text-align: center;
+            padding: 20px;
+        }
+        .content img {
+            max-width: 100%;
+        }
+    </style>
 </head>
 <body>
-     <div style="background-color: #FFCCCC; border-radius: 10px; width: 400px; margin: auto;">
-      <div style="background-color: #170101; padding: 20px; text-align: center;">
-          <img src="https://res.cloudinary.com/ddcp2fb2w/image/upload/v1708422866/suraab/Frame_1000003406_baxfsy.png"/>
-      </div>
-      <div style="display: flex; flex-direction: column; gap: 10px; text-align: center; padding: 20px;">
-          <div>
-              <img src="https://res.cloudinary.com/ddcp2fb2w/image/upload/v1708422857/suraab/Frame_1000003375_grfen4.png"  alt="" />
-          </div>
-          <div>
-              <h2 style="font-weight: bold;">
-               Hi {{name}} Your response has been recieved!
-              </h2>
-              <p>
-                  Lorem ipsum dolor sit amet consectetur. Habitant aliquet suscipit
-                  sed facilisi sit. Nibh at nisl augue viverra vitae amet orci lorem.
-                  Luctus faucibus laoreet eu parturient in. Elementum consectetur enim
-                  fames velit sit donec.
-              </p>
-          </div>
-      </div>
-  </div>
+    <div class="container">
+        <div class="header">
+            <img src="https://res.cloudinary.com/ddcp2fb2w/image/upload/v1708422866/suraab/Frame_1000003406_baxfsy.png" alt="" />
+        </div>
+        <div class="content">
+            <div>
+                <img src="https://res.cloudinary.com/ddcp2fb2w/image/upload/v1708422857/suraab/Frame_1000003375_grfen4.png" alt="" />
+            </div>
+            <div>
+                <h2 style="font-weight: bold;">
+                    Hi {{name}} Your response has been received!
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur. Habitant aliquet suscipit
+                    sed facilisi sit. Nibh at nisl augue viverra vitae amet orci lorem.
+                    Luctus faucibus laoreet eu parturient in. Elementum consectetur enim
+                    fames velit sit donec.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
